2005-03-12  Pascal Terjan  <pterjan@linuxfr.org>

	* lib/alexandria/book_providers/proxis.rb:

	Fixed to work again.

2005-03-12  Laurent Sansonetti  <lrz@gnome.org>

	* lib/alexandria/book_providers/bn.rb:
	
	Fixed the regexp once again.

2005-03-11  Laurent Sansonetti  <lrz@gnome.org>

	* NEWS:

	Mentions the amazon.[fr|ca] support.

2005-03-09  Laurent Sansonetti  <lrz@gnome.org>

	* AUTHORS,
	  lib/alexandria.rb:

	Added David.

	* README,
	  NEWS:

	Prepared for the upcoming 0.5.0.

2005-03-07  Laurent Sansonetti  <lrz@gnome.org>

	* data/alexandria/glade/book_properties_dialog.glade,
	  data/alexandria/glade/main_app.glade,
	  data/alexandria/glade/new_book_dialog.glade:

	Marked '*' and 'Alexandria' as not translable.

	* lib/alexandria/ui/main_app.rb.
	  lib/alexandria/ui/new_book_dialog.rb:

	Fixed wording (thanks to David Weinehall).

2005-03-06  Laurent Sansonetti  <lrz@gnome.org>

	* lib/alexandria/ui/main_app.rb,
	  lib/alexandria/ui/book_properties_dialog_base.rb,
	  lib/alexandria/book_providers.rb,
	  lib/alexandria/ui/export_dialog.rb:

	Fixed wording (thanks to David Weinehall).

2005-03-05  Laurent Sansonetti  <lrz@gnome.org>

	* lib/alexandria/ui/main_app.rb:

	- Restored the possibility to filter books by notes ;
	- Filtering text field is more robust ;
	- Make sure we do not select a library before having setup the moves
	  action at the beginning.

2005-03-03  Laurent Sansonetti  <lrz@gnome.org>

	* lib/alexandria/book_providers/mcu.rb:

	Mark the name of the provider as translatable.

2005-03-02  Laurent Sansonetti  <lrz@gnome.org>

	* lib/alexandria/ui/main_app.rb:

	Do not add the books twice in the library.

2005-03-01  Laurent Sansonetti  <lrz@gnome.org>

	* lib/alexandria/book_providers/amazon.rb:

	Setup the online information url according to the selected locale.

2005-02-28  Constantine Evans  <cevans@costinet.org>

	* lib/alexandria/book_providers/amazon.rb:

	Added workaround for an Amazon US encoding bug. See comments in code