@@ -11,6 +11,9 @@ Robby Stephenson <robby@periapsis.org>
 Takayuki Kusano <AE5T-KSN@asahi-net.or.jp>
 Zachary P. Landau <kapheine@hypa.net>
 
+Artists:
+Stefanie Dijoux <stefanie.dijoux@gmail.com>
+
 Translators:
 Dafydd Harries <daf@muse.19inch.net> (cy)
 David Weinehall <tao@debian.org> (sv)
